kubernetes/acua.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: acua
    version: "1.0"
  name: acua
  namespace: acua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acua
      version: "1.0"
  template:
    metadata:
      labels:
        app: acua
        version: "1.0"
    spec:
      containers:
      - name: acua
        image: ghcr.io/mpfglaser/apartmentcomplexutilityapp/acua:0.6.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 1
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: acua
  name: acua
  namespace: acua
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: acua
