kubernetes/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth-service
    version: "1.0"
  name: auth-service
  namespace: acua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
      version: "1.0"
  template:
    metadata:
      labels:
        app: auth-service
        version: "1.0"
    spec:
      containers:
      - name: auth-service
        image: ghcr.io/mpfglaser/apartmentcomplexutilityapp/auth-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth-service
  name: auth-service
  namespace: acua
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: auth-service
