kubernetes/location-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: location-service
    version: "1.0"
  name: location-service
  namespace: acua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: location-service
      version: "1.0"
  template:
    metadata:
      labels:
        app: location-service
        version: "1.0"
    spec:
      serviceAccountName: acua-ksa
      containers:
      - name: location-service
        image: ghcr.io/mpfglaser/apartmentcomplexutilityapp/location-service:0.1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
      - name: cloud-sql-proxy
        # It is recommended to use the latest version of the Cloud SQL Auth Proxy
        # Make sure to update on a regular schedule!
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.0
        args:
          # If connecting from a VPC-native GKE cluster, you can use the
          # following flag to have the proxy connect over private IP
          # - "--private-ip"

          # Enable structured logging with LogEntry format:
          - "--structured-logs"

          # Replace DB_PORT with the port the proxy should listen on
          - "--port=5432"
          - "mpfg-acua:europe-west4:location"

        securityContext:
          # The default Cloud SQL Auth Proxy image runs as the
          # "nonroot" user and group (uid: 65532) by default.
          runAsNonRoot: true
        # You should use resource requests/limits as a best practice to prevent
        # pods from consuming too many resources and affecting the execution of
        # other pods. You should adjust the following values based on what your
        # application needs. For details, see
        # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
        resources:
          requests:
            # The proxy's memory use scales linearly with the number of active
            # connections. Fewer open connections will use less memory. Adjust
            # this value based on your application's requirements.
            memory: "1Gi"
            # The proxy's CPU use scales linearly with the amount of IO between
            # the database and the application. Adjust this value based on your
            # application's requirements.
            cpu:    "1"
          limits:
            memory: "1Gi"
            cpu:    "1"
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: location-service
  name: location-service
  namespace: acua
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: location-service
