kubernetes/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user-service
    version: "1.0"
  name: user-service
  namespace: acua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
      version: "1.0"
  template:
    metadata:
      labels:
        app: user-service
        version: "1.0"
    spec:
      serviceAccountName: acua-ksa
      containers:
      - name: user-service
        image: ghcr.io/mpfglaser/apartmentcomplexutilityapp/user-service:0.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-service
  name: user-service
  namespace: acua
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: user-service
