kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acua-ingress
  namespace: acua
  annotations:
    kubernetes.io/ingress.class: gce

spec:
  rules:
    - host: acua.test
      http:
        paths:
          - path: /api/auth/
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acua
                port:
                  number: 8080
    - host: acua.mpfglaser.nl
      http:
        paths:
          - path: /api/auth/
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acua
                port:
                  number: 8080
